--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       <h2>sit <span>on</span> our <span>chair</span></h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. </p>
       <a href="#">
-      <div class="button top">Zobacz więcej</div>
+        <div class="button btn_more">
+          Zobacz więcej
+        </div>
       </a>
     </div>
   </div>
