Adding animated menus

--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
     <div class="logo">sit <span>on</span> chair</div>
     <nav>
       <div id="menu_btn">
-        <div id="tip"></div>
+        <div id="tip1"></div>
         <img src="images/hamburger.png" alt="menu button">
       </div>
       <ul class="menu">
-        <li><a href="#">o firmie</a></li>
-        <li><a href="#">galeria</a></li>
-        <li><a href="#">kontakt</a></li>
+        <li><a>o firmie</a></li>
+        <li><a href="#" class="menu_href">galeria</a></li>
+        <li><a href="#" class="menu_href">kontakt</a></li>
+      </ul>
+      <ul class="sub_menu1 hidden">
+        <li><a href="#" class="menu_href">Aktualności</a></li>
+        <li><a href="#" class="menu_href">Nasz team</a></li>
+        <li><a href="#" class="menu_href">Historia</a></li>
+        <div id="tip2"></div>
+        <div id="tip3"></div>
       </ul>
     </nav>
   </div>
